# zkSudoku-telegram-verifier

./: .gitignore  Cargo.toml  README.md  THRIVE_APPLICATION.md  package-lock.json  package.json
config/: config.env.example
docs/tutorial/: end-to-end.md
noir/sudoku/: Nargo.toml  Prover.toml
noir/sudoku/src/: main.nr
pallet-zk-sudoku/: Cargo.toml
pallet-zk-sudoku/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
server/: index.js
sudoku-cli/: Cargo.toml
sudoku-cli/src/: main.rs
sudoku-generation/: logic-lane-puzzles.js  puzzle-16x16-example.js  sudoku-generator.js
sudoku-verifier-lib/: Cargo.toml
sudoku-verifier-lib/src/: lib.rs
tests/: test-comprehensive.js  test-final-flow.js  test-funded-account.js  test-leaderboard.js  test-logic-lane.js  test-proof-format.js  test-proof-generation.js  test-puzzle-integrity.js  test-real-proofs.js  test-simple.js  test-telegram-integration.js  test-telegram-zkverify-integration.js  test-ultraplonk-format.js  test-zkverify-debug.js  test-zkverify-submission.js
verifier-interface/: Cargo.toml
verifier-interface/src/: lib.rs
webapp/: app.js  index.html
zkv-sudoku-verify-lib/: Cargo.toml
zkv-sudoku-verify-lib/src/: lib.rs
