[workspace]
members = [
    "sudoku-verifier-lib",
    "sudoku-cli",
    "zkv-sudoku-verify-lib",
    "pallet-telegram-zkverify",
]
default-members = [
    "sudoku-verifier-lib",
    "zkv-sudoku-verify-lib",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"