[package]
name = "sudoku-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI wrapper for sudoku-verifier-lib"

[dependencies]
sudoku-verifier-lib = { path = "../sudoku-verifier-lib" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[[bin]]
name = "sudoku-cli"
path = "src/main.rs"
